--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
-    <link href="/src/styles.css" rel="stylesheet">
+    <!-- <link href="/src/styles.css" rel="stylesheet"> -->
   </head>
   <body>
     <div id="root"></div>
